# NetSekhmet

./: pyproject.toml  setup.py
config/: netsekhmet.yml
netsekhmet/: __init__.py  cli.py
netsekhmet/agents/: phantom_agent.py
netsekhmet/api/: server.py
netsekhmet/c2/: server.py
netsekhmet/core/: config.py  correlation.py  database.py  exfiltration.py  exploit_engine.py  lateral_movement.py  payload_generator.py  reporter.py  scanner.py  scope.py  sessions.py  utils.py
netsekhmet/exploits/: apache_path_traversal.py  base.py  bluekeep.py  cacti_rce.py  confluence_rce.py  dirtypipe.py  drupalgeddon2.py  eternalblue_real.py  exchange_proxylogon.py  f5_rce.py  heartbleed_scan.py  jenkins_rce.py  log4j2_rce.py  log4shell.py  moveit_rce.py  papercut_rce.py  printnightmare.py  proxynotshell.py  proxyshell.py  screenconnect_auth_bypass.py  shellshock.py  smbghost.py  spring4shell.py  struts2_rce.py  teamcity_auth_bypass.py  thinkphp_rce.py  vcenter_rce.py  vmware_workspace_rce.py  wordpress_admin_shell.py  zerologon.py  zimbra_rce.py
netsekhmet/web/: app.py
